# code-hijack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md
backend/: pyproject.toml
backend/docs/: harness-plan.md  r7_phase1_starlette_clusters.md  r7_pipeline_reversal.md  skeleton-v2.md  skeleton.md  tasks.md  why_coverage_roadmap.md  worklog.md
backend/src/hijack/: __init__.py  cli.py  errors.py  skill.py
backend/src/hijack/core/: __init__.py  analyzer.py  apply.py  archaeology.py  critic.py  docs.py  evidence.py  exemplar_check.py  exemplars.py  fetcher.py  generator.py  harness_export.py  intent_clusterer.py  measure.py  models.py  negative_space.py  pr_archaeology.py  pr_decisions.py  preprocessor.py  prompts.py  satd.py  scope_critic.py  session.py  style_fingerprint.py  target_stack.py  test_decisions.py
backend/src/hijack/io/: git.py
backend/src/hijack/llm/: __init__.py  api.py  base.py  local.py
examples/: README.md
scripts/: check_commit_decisions.py  check_pr_decisions.py  check_test_decisions.py  diagnose_exemplar_scores.py  fresh_g1g2_retrofit.py  retrofit_g1_exemplars.py
tests/: conftest.py  test_analyzer.py  test_apply.py  test_archaeology.py  test_archaeology_semantic.py  test_cli.py  test_commit_decisions.py  test_critic.py  test_docs.py  test_errors.py  test_evidence.py  test_exemplar_check.py  test_exemplars.py  test_fetcher.py  test_generator.py  test_git_io.py  test_harness_export.py  test_intent_clusterer.py  test_llm.py  test_local_llm.py  test_measure.py  test_models.py  test_negative_space.py  test_pr_archaeology.py  test_pr_decisions.py  test_preprocessor.py  test_prompts.py  (+7 more)
(+65 files in other folders)
